--- a/P2_cv.html
+++ b/P2_cv.html
@@ -22,7 +22,7 @@
 
         <div class="bloc_cv">
 
-        <article class="element">
+        <section class="element">
             <h2>formation</h2>
             <div class="filet_2"></div>
             <div class="bloc_formation_1">
@@ -85,20 +85,12 @@
             <h2>recommandations</h2>
             <div class="filet_2"></div>
             <div class="referents">
-                <div class="referent_1">
-                    <p>Robert Durand</p>
-                    <p>CEO</p>
-                    <p>Téléphone : 01.23.23.45.67</p>
-                    <p>Email : r.durant@mail.com</p>
-                </div>
-                <div class="referent_2">
-                    <p>Arnaud Laval</p>
-                    <p>Designer</p>
-                    <p>Téléphone : 01.54.87.66.66</p>
-                    <p>Email : a.laval@mail.com</p>
+                <ul>
+                    <li>Robert Durand<br>CEO<br>01.23.23.45.67<br>r.durant@mail.com</li>
+                    <li>Arnaud Laval<br>Designer<br>01.54.87.66.66<br>a.laval@mail.com</li>
+                </ul>
             </div>
-            </div>
-        </article>
+        </section>
 
         <aside class="element">
             <h2>contact</h2>
@@ -109,7 +101,7 @@
             <h2>à propos de moi</h2>
             <p class="paragraphe_about">Hello ! Développeuse freelance basée en région parisienne, j'ai déjà à mon actif huit années d'expérience dans le domaine du design graphique. Mes principaux clients exercent dans le domaine du textile et de l'événementiel. Pour eux, je réalise des books de tendances, des affiches, des stands. Pour d'autres clients je crée également des identités visuelles. J'ai également travaillé quatre ans dans la publicité, et quelques maquettes de sites web à mon actif. J'ai par ailleurs un projet personnel éditorial lié à mon diplôme. En bref, le design graphique c'est un métier mais aussi une passion !</p>
             <h2>loisirs</h2>
-            <div class="loisirs" style="font-size: 3rem;">
+            <div class="loisirs">
                 <i class="fas fa-walking fa-lg"></i>
                 <i class="fas fa-bicycle fa-lg"></i>
                 <i class="fas fa-seedling fa-lg"></i>
