corrections finales du html

--- a/P2_cv.html
+++ b/P2_cv.html
@@ -102,9 +102,9 @@
             <p class="paragraphe_about">Hello ! Développeuse freelance basée en région parisienne, j'ai déjà à mon actif huit années d'expérience dans le domaine du design graphique. Mes principaux clients exercent dans le domaine du textile et de l'événementiel. Pour eux, je réalise des books de tendances, des affiches, des stands. Pour d'autres clients je crée également des identités visuelles. J'ai également travaillé quatre ans dans la publicité, et quelques maquettes de sites web à mon actif. J'ai par ailleurs un projet personnel éditorial lié à mon diplôme. En bref, le design graphique c'est un métier mais aussi une passion !</p>
             <h2>loisirs</h2>
             <div class="loisirs">
-                <i class="fas fa-walking fa-lg"></i>
-                <i class="fas fa-bicycle fa-lg"></i>
-                <i class="fas fa-seedling fa-lg"></i>
+                <div class="icone"><i class="fas fa-walking fa-lg"></i></div>
+                <div class="icone"><i class="fas fa-bicycle fa-lg"></i></div>
+                <div class="icone"><i class="fas fa-seedling fa-lg"></i></div>
             </div>
         </aside>
         </div>
