ajout du responsive

--- a/P2_cv.html
+++ b/P2_cv.html
@@ -10,9 +10,11 @@
 
     <body>
         <header>
-            <figure class="photo">
+            <div class="photo">
+            <figure>
                 <p><img src="images/portrait.jpg" alt="ma photo"></p>
             </figure>
+            </div>
             <div class="titre">
                 <h1 class="name">Olympe Albert</h1>
                 <div class="filet"></div>
